@@ -4,4 +4,3 @@ import monster
 import pc
 import pc_data_lib
 import pet
-import serverconfig
