@@ -2,7 +2,204 @@
 # -*- coding: utf-8 -*-
 from lib import script
 from lib import general
-ID = 12000170 #携帯ゴミ箱
+ID = (
+	11001528,
+	11001529,
+	11001530,
+	11001531,
+	11001532,
+	11001533,
+	11001534,
+	11001535,
+	11001536,
+	11001537,
+	#ゴミ箱　0～999
+	12000000,
+	12000001,
+	12000002,
+	12000003,
+	12000004,
+	12000005,
+	12000006,
+	12000007,
+	12000008,
+	12000009,
+	12000010,
+	12000011,
+	12000012,
+	12000013,
+	12000014,
+	12000015,
+	12000016,
+	12000017,
+	12000018,
+	12000019,
+	12000020,
+	12000021,
+	12000022,
+	12000023,
+	12000024,
+	12000025,
+	12000026,
+	12000027,
+	12000028,
+	12000029,
+	12000030,
+	12000031,
+	12000032,
+	12000033,
+	12000034,
+	12000035,
+	12000036,
+	12000037,
+	12000038,
+	12000039,
+	12000040,
+	12000041,
+	12000042,
+	12000043,
+	12000044,
+	12000045,
+	12000046,
+	12000047,
+	12000048,
+	12000049,
+	12000050,
+	12000051,
+	12000052,
+	12000053,
+	12000054,
+	12000055,
+	12000056,
+	12000057,
+	12000058,
+	12000059,
+	12000060,
+	12000061,
+	12000062,
+	12000063,
+	12000064,
+	12000065,
+	12000066,
+	12000067,
+	12000068,
+	12000069,
+	12000070,
+	12000071,
+	12000072,
+	12000073,
+	12000074,
+	12000075,
+	12000076,
+	12000077,
+	12000078,
+	#ノーザン用ゴミ箱
+	12000079,
+	12000080,
+	12000081,
+	12000082,
+	12000083,
+	12000084,
+	12000085,
+	12000086,
+	12000087,
+	12000088,
+	12000089,
+	12000090,
+	12000091,
+	12000092,
+	12000093,
+	12000094,
+	#アイアンサウス用ゴミ箱
+	12000095,
+	12000096,
+	12000097,
+	12000098,
+	12000099,
+	12000100,
+	12000101,
+	12000102,
+	12000103,
+	12000104,
+	12000105,
+	12000106,
+	12000107,
+	12000108,
+	12000109,
+	#12000110,
+	#12000111,
+	12000112,
+	12000113,
+	12000114,
+	#ファーイースト用ゴミ箱
+	12000115,
+	12000116,
+	12000117,
+	12000118,
+	12000119,
+	12000120,
+	12000121,
+	12000122,
+	12000123,
+	12000124,
+	12000125,
+	12000126,
+	12000127,
+	12000128,
+	12000129,
+	12000130,
+	12000131,
+	#モーグト用ゴミ箱
+	12000132,
+	12000133,
+	12000134,
+	12000135,
+	12000136,
+	12000137,
+	#トンカ用ゴミ箱
+	12000138,
+	12000139,
+	12000140,
+	12000141,
+	12000142,
+	12000143,
+	12000144,
+	12000145,
+	12000146,
+	12000147,
+	12000148,
+	12000149,
+	12000150,
+	12000151,
+	12000152,
+	12000153,
+	#エレキテルラボ・探索マップ用ゴミ箱
+	12000154,
+	12000155,
+	12000156,
+	12000157,
+	12000158,
+	12000159,
+	12000160,
+	12000161,
+	12000162,
+	#天塔、ＷＬ島用ゴミ箱
+	12000163,
+	12000164,
+	12000165,
+	12000166,
+	12000167,
+	21180001,
+	12000169,
+	#ゲストID用ゴミ箱
+	12000170,
+	#ウェストフォート用ゴミ箱
+	12000171,
+	12000172,
+	12000173,
+	12000174,
+	12001226,
+)
 
 def main(pc):
 	for item in script.npctrade(pc):
